# azumi

./: .gitattributes  .gitignore  AI_GUIDE_FOR_WRITING_AZUMI.md  AI_RULES_HASH  ASSET_PIPELINE_DESIGN.md  AZUMI_DESCRIPTION.md  Cargo.toml  FIX_PLAN.md  FRAMEWORK_COMPARISON.md  HOT_RELOAD.md  LICENSE  PHASE_3_STRATEGY.md  README copy.md  README.md  ROADMAP.md  SUBSECOND_HOT_RELOAD.md  WHEN_TO_USE_AZUMI.md  build.rs  check_log.txt  check_output.txt  do.md  lcov.info  release.sh  repro  repro.rs  tarpaulin-report.html  tasks.md  test_namespace  test_namespace.rs  test_results.txt  thoughts.md  watcher.py
.dracon/: project-state.md
client/: README.md  azumi.js
demo/: Cargo.toml  assets_manifest.json  build.rs  check_output.txt
docs/: AI_SUITABILITY_REPORT.md  ARCHITECTURE_COMPARISON.md  CONCEPT_AUTH_AND_DATA_FLOW.md  FRAMEWORK_COMPARISON.md  LAUNCH_MANIFEST.md  PATTERN_EXTRACTORS_VS_EXTENSIONS.md  TAURI_INTEGRATION.md
macros/: Cargo.toml
macros/src/: accessibility_validator.rs  action.rs  asset_rewriter.rs  component.rs  css.rs  css_validator.rs  head.rs  html_structure_validator.rs  lib.rs  live.rs  page.rs  repro_ordering.rs  schema.rs  style.rs  suggestions.rs  token_parser.rs
macros/tests/: class_quote_syntax_test.rs
src/: action.rs  auth.rs  client.min.js  context.rs  devtools.rs  hot_reload.rs  lib.rs  script.rs  security.rs  seo.rs  tests.rs
static/: azumi.js
tests/: accessibility_tests.rs  ai_lint_tests.rs  attribute_tests.rs  component_nested_macro_tests.rs  component_stress_tests.rs  component_tests.rs  control_flow_tests.rs  css_tests.rs  (+29 more)
(+55 files in other folders)
