[package]
name = "azumi"
version = "0.7.1244"
edition = "2021"
authors = [" DraconDev <dracsharp@gmail.com>"]
license = "MIT"
description = "Type-safe, compile-time HTML templating for Rust"
repository = "https://github.com/DraconDev/azumi"
keywords = ["html", "template", "macro", "web"]
categories = ["template-engine", "web-programming"]

[workspace]
members = ["macros", "demo"]
resolver = "2"

[features]
schema = ["azumi-macros/schema"]
test-utils = ["dep:scraper"]

[dependencies]
azumi-macros = { path = "macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws"] }
inventory = "0.3"
scraper = { version = "0.18", optional = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
tokio = { version = "1.0", features = ["sync", "macros"] }
notify = "6.1"
walkdir = "2.5"
libc = "0.2"

[dev-dependencies]
azumi = { path = ".", features = ["test-utils"] }
