[package]
name = "azumi-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
schema = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
nom = "7.1"
regex = "1.10"
heck = "0.5"
lightningcss = "1.0.0-alpha.68"
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
once_cell = "1.21.3"
